Configurado o swagger
